# ORC

./: '  .gitignore  2d_test_case.csv  Cargo.toml  README.md
examples/: .gitignore  2D_2x4.msh  2D_3x6.fbc  2D_3x6.fbc_dfupdate  2D_3x6.fbc_old  2D_3x6.msh  2D_3x6.uns  3D_1x3.fbc_dfupdate  3D_1x3.fbc_old  3D_1x3.msh  3x3_cube.msh  channel_flow.csv  channel_flow_gradients.csv  couette_flow.csv  couette_flow_128x64x1.msh  couette_flow_analytical.csv  couette_flow_gradients.csv  coutte_flow.msh  coutte_flow_8x8x1.msh  hex.uns  plot_output.py  script.tcl
scripts/: make_test_linear_system.py
src/: discretization.rs  io.rs  lib.rs  linear_algebra.rs  main.rs  mesh.rs  solver.rs  tests.rs
