[package]
name = "orc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
itertools = "0.12.1"
log = "0.4.21"
nalgebra = "0.32.4"
rayon = "1.10.0"
regex = "1.10.3"
sprs = "0.11.1"

[profile.release]
debug = true
